--- a/src/app/screens/home-screen/components/section-about/section-about.component.html
+++ b/src/app/screens/home-screen/components/section-about/section-about.component.html
@@ -3,7 +3,7 @@
     <div class="info-container">
         <img class="background-lines" src="/assets/img/home/about-background-lines.svg" />
         <p class="text">
-            TeamLoan é uma plataforma onde qualquer empresa, desde pequenos estabelecimentos
+            TeamLoan é uma plataforma grátis onde qualquer empresa, desde pequenos estabelecimentos
             comerciais a grandes empresas, pode registar-se para partilhar equipas temporariamente.
         </p>
     </div>
