--- a/src/app/screens/login-screen/component/login-screen.component.html
+++ b/src/app/screens/login-screen/component/login-screen.component.html
@@ -31,7 +31,7 @@
         </fieldset>
     </div>
 
-    <a class="forgot-password">Esqueceu-se da password?</a>
+    <!-- <a class="forgot-password">Esqueceu-se da password?</a> -->
 
     <div class="buttons-container">
         <app-button
