--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -7,6 +7,7 @@
     left: 0;
     z-index: 1;
     width: 100%;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .header-container {
@@ -44,6 +45,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        cursor: pointer;
 
         .back {
             display: flex;
