--- a/src/app/components/posts-list/posts-list.component.html
+++ b/src/app/components/posts-list/posts-list.component.html
@@ -1,10 +1,22 @@
-<div class="filter-container">
-    <app-button label="Submit" (click)="filter()"></app-button>
-</div>
-<div class="posts-list">
-    <div class="columns is-desktop is-multiline">
-        <div *ngFor="let post of postsList" class="column is-narrow">
+<app-filter-toolbar
+    class="filter-container"
+    [intentToggle]="false"
+    [districtOptions]="districtOptions"
+    [municipalityOptions]="municipalityOptions"
+    [sectorOptions]="businessAreaOptions"
+    [functionOptions]="jobsOptions"
+    (filterChange)="filter($event)"
+></app-filter-toolbar>
+
+<div class="posts-list" *ngIf="postsList?.length > 0">
+    <ng-container *ngIf="postsList?.length > 0">
+        <div *ngFor="let post of postsList">
             <app-post-card [postCard]="post" [actions]="actions"></app-post-card>
         </div>
-    </div>
+    </ng-container>
+</div>
+<div *ngIf="postsList?.length === 0" class="empty-container">
+    <h1 class="title">
+        Sem resultados!
+    </h1>
 </div>
