--- a/src/app/components/posts-list/posts-list.component.scss
+++ b/src/app/components/posts-list/posts-list.component.scss
@@ -1,9 +1,11 @@
 @import 'bulma/sass/utilities/_all';
 
 :host {
+    --grid-gap: 15px;
+    --column-width: 372px;
     display: flex;
     justify-content: center;
-    margin: 15px 50px;
+    flex: 1;
 
     @include mobile {
         flex-direction: column;
@@ -11,23 +13,78 @@
     }
 
     @include tablet {
+        margin: 15px 50px;
     }
 }
 
 .filter-container {
-    width: 211px;
-    height: 497px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-
     @include tablet {
-        margin-right: 10px;
     }
 }
 
 .posts-list {
+    @include mobile {
+        display: flex;
+        flex-direction: column;
+    }
+
+    @include tablet {
+        display: grid;
+        column-gap: var(--grid-gap);
+        row-gap: var(--grid-gap);
+        margin-left: var(--grid-gap);
+        grid-template-columns: var(--column-width);
+    }
+
+    @include desktop {
+        grid-template-columns: var(--column-width) var(--column-width);
+    }
+
+    @include widescreen {
+        grid-template-columns: var(--column-width) var(--column-width);
+    }
+
+    @include fullhd {
+        grid-template-columns: var(--column-width) var(--column-width) var(--column-width);
+    }
+}
+
+.empty-container {
     display: flex;
     justify-content: center;
-    max-width: 929px;
-    max-width: 768px;
-    max-width: 1164px;
+    align-items: center;
+
+    .title {
+        color: var(--color-black);
+
+        @include mobile {
+            font-size: 20px;
+            line-height: 35px;
+        }
+
+        @include tablet {
+            font-size: 30px;
+            line-height: 70px;
+        }
+    }
+
+    @include mobile {
+        width: var(--column-width);
+    }
+
+    @include tablet {
+        width: var(--column-width);
+    }
+
+    @include desktop {
+        width: calc((var(--column-width) + var(--grid-gap)) * 2);
+    }
+
+    @include widescreen {
+        width: calc((var(--column-width) + var(--grid-gap)) * 2);
+    }
+
+    @include fullhd {
+        width: calc((var(--column-width) + var(--grid-gap)) * 3);
+    }
 }
