--- a/src/app/material/filter-toolbar/filter-toolbar.component.html
+++ b/src/app/material/filter-toolbar/filter-toolbar.component.html
@@ -17,21 +17,21 @@
     </div>
     <hr *ngIf="intentToggle" />
     <div class="filter-container">
-        <div *ngIf="districtOptions.length !== 0" class="filter-component">
+        <div *ngIf="districtOptions?.length > 0" class="filter-component">
             <fieldset>
                 <label class="label" for="district">Distrito</label>
                 <app-input-select
-                    formControlName="district"
+                    [formControlName]="queryFilterParameters.DISTRICT"
                     [inputSelectOptions]="districtOptions"
                     placeholder="Todos"
                 ></app-input-select>
             </fieldset>
         </div>
-        <div *ngIf="municipalityOptions.length !== 0" class="filter-component">
+        <div *ngIf="municipalityOptions?.length > 0" class="filter-component">
             <fieldset>
                 <label class="label" for="municipality">Município</label>
                 <app-input-select
-                    formControlName="municipality"
+                    [formControlName]="queryFilterParameters.MUNICIPALITY"
                     [inputSelectOptions]="municipalityOptions"
                     placeholder="Todos"
                 ></app-input-select>
@@ -39,21 +39,21 @@
         </div>
     </div>
     <div class="filter-container">
-        <div *ngIf="sectorOptions.length !== 0" class="filter-component">
+        <div *ngIf="sectorOptions?.length > 0" class="filter-component">
             <fieldset>
                 <label class="label" for="sector">Sector</label>
                 <app-input-select
-                    formControlName="sector"
+                    [formControlName]="queryFilterParameters.BUSINESS_AREA"
                     [inputSelectOptions]="sectorOptions"
                     placeholder="Todos"
                 ></app-input-select>
             </fieldset>
         </div>
-        <div *ngIf="functionOptions.length !== 0" class="filter-component">
+        <div *ngIf="functionOptions?.length > 0" class="filter-component">
             <fieldset>
                 <label class="label" for="function">Função</label>
                 <app-input-select
-                    formControlName="function"
+                    [formControlName]="queryFilterParameters.JOB"
                     [inputSelectOptions]="functionOptions"
                     placeholder="Todas"
                 ></app-input-select>
