--- a/src/app/material/input-select/input-select.component.html
+++ b/src/app/material/input-select/input-select.component.html
@@ -1,5 +1,6 @@
 <div class="dropdown" [ngClass]="{ 'is-active': focus }">
     <select (change)="onSelectChange($event)">
+        <option [value]=""> - </option>
         <option *ngFor="let option of filteredOptions" [value]="option.key">
             {{ option.label }}
         </option>
@@ -17,11 +18,15 @@
         </div>
         <div class="dropdown-content">
             <ul class="dropdown">
+                <li (click)="onOptionSelect()" class="dropdown-item empty-item">
+                    <span> - </span>
+                </li>
                 <li
                     *ngFor="let option of filteredOptions"
                     (click)="onOptionSelect(option)"
                     class="dropdown-item"
                     [ngClass]="{ selected: option.key === selectedValue?.key }"
+                    [attr.title]="option.label"
                 >
                     <span>{{ option.label }}</span>
                 </li>
