--- a/src/app/material/post-card/post-card.component.scss
+++ b/src/app/material/post-card/post-card.component.scss
@@ -8,6 +8,7 @@
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     border-radius: 10px;
     overflow: hidden;
+    background-color: var(--color-white);
 }
 
 .header {
@@ -30,7 +31,7 @@
         position: absolute;
         top: 0;
         left: 0;
-        z-index: -1;
+        z-index: 0;
         width: 100%;
         height: 78px;
         overflow: hidden;
@@ -47,6 +48,7 @@
         text-align: center;
         text-transform: uppercase;
         color: var(--color-white);
+        z-index: 0;
 
         @include mobile {
             font-size: 30px;
