adding request outcome interface

--- a/src/app/screens/request-password-screen/component/request-password-screen.component.html
+++ b/src/app/screens/request-password-screen/component/request-password-screen.component.html
@@ -1,31 +1,34 @@
-<form class="request-password-container" [formGroup]="form" (submit)="onSubmit($event)">
+<div class="request-password-container">
     <h1 class="title">Recuperar password</h1>
+    <form [formGroup]="form" (submit)="onSubmit($event)">
+        <div class="form-fields">
+            <fieldset class="field-container">
+                <app-input-text
+                    formControlName="email"
+                    type="text"
+                    placeholder="E-mail"
+                ></app-input-text>
+                <div *ngIf="submitted && emailControl?.errors?.required" class="error-message">
+                    Campo obrigatório
+                </div>
+                <div
+                    *ngIf="
+                        submitted && !emailControl?.errors?.required && emailControl?.errors?.format
+                    "
+                    class="error-message"
+                >
+                    Email inválido
+                </div>
+            </fieldset>
+        </div>
 
-    <div class="form-fields">
-        <fieldset class="field-container">
-            <app-input-text
-                formControlName="email"
-                type="text"
-                placeholder="E-mail"
-            ></app-input-text>
-            <div *ngIf="submitted && emailControl?.errors?.required" class="error-message">
-                Campo obrigatório
-            </div>
-            <div
-                *ngIf="submitted && !emailControl?.errors?.required && emailControl?.errors?.format"
-                class="error-message"
-            >
-                Email inválido
-            </div>
-        </fieldset>
-    </div>
-
-    <div class="buttons-container">
-        <app-button
-            label="Recuperar password"
-            type="submit"
-            [iconStatus]="submitting && buttonStatus"
-            class="button-submit"
-        ></app-button>
-    </div>
-</form>
+        <div class="buttons-container">
+            <app-button
+                label="Recuperar password"
+                type="submit"
+                [iconStatus]="submitting && buttonStatus"
+                class="button-submit"
+            ></app-button>
+        </div>
+    </form>
+</div>
