--- a/src/app/screens/register/components/register-form/register-form.component.html
+++ b/src/app/screens/register/components/register-form/register-form.component.html
@@ -1,44 +1,40 @@
-<form
-    [formGroup]="form" 
-    (ngSubmit)="submit()">
-
+<form [formGroup]="form" (ngSubmit)="submit()">
     <div class="columns is-desktop">
         <app-company-form
             [notifier]="notifier"
             [businessAreas]="businessAreas"
             class="column"
-            formControlName="company">
+            formControlName="company"
+        >
         </app-company-form>
 
-        <app-user-form
-            [notifier]="notifier"
-            class="column"
-            formControlName="user">
-        </app-user-form>
+        <app-user-form [notifier]="notifier" class="column" formControlName="user"> </app-user-form>
     </div>
     <div class="columns is-desktop">
         <div class="column terms-container">
-            <app-checkbox
-                formControlName="checkbox"
-                [label]="
-                    'Concordo com os <a>Termos e Condições</a> assim como com a <a>Política de Privacidade</a> do serviço'
-                "
-            ></app-checkbox>
-            <div *ngIf="hasTermsError" class="error-message">
-                Campo obrigatório
+            <div class="terms-content">
+                <app-checkbox
+                    formControlName="checkbox"
+                    [label]="
+                        'Concordo com os <a>Termos e Condições</a> assim como com a <a>Política de Privacidade</a> do serviço'
+                    "
+                ></app-checkbox>
+                <div *ngIf="hasTermsError" class="error-message">
+                    Campo obrigatório
+                </div>
             </div>
         </div>
+
         <div class="column submit-button-container">
             <div *ngIf="serverError" class="error-message">
                 Ocorreu um erro, por favor tente novamente!
             </div>
             <app-button
-                    label="Registrar"
-                    [iconStatus]="requesting ? buttonStatus.LOADING : ''"
-                    type="submit"
-                    class="button-submit"
+                label="Registrar"
+                [iconStatus]="requesting ? buttonStatus.LOADING : ''"
+                type="submit"
+                class="button-submit"
             ></app-button>
         </div>
     </div>
-    
 </form>
