card 87 - email fix

--- a/src/app/screens/confirmation-screen/confirmation-screen.component.html
+++ b/src/app/screens/confirmation-screen/confirmation-screen.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="body-section">
         <p class="text">
-            Um e-mail de confirmação foi enviado para
+            Um email de confirmação foi enviado para
             <br />
             <span>{{ email }}</span>
         </p>
