adding intent to register form

--- a/src/app/material/filter-toolbar/filter-toolbar.component.html
+++ b/src/app/material/filter-toolbar/filter-toolbar.component.html
@@ -4,14 +4,14 @@
             class="filter-component"
             label="Equipas disponíveis"
             [iconStatus]=""
-            (click)="onIntentChange(postsIntent.LEND)"
+            (click)="onIntentChange(postsIntent.Lend)"
             [theme]="lendTheme"
         ></app-button>
         <app-button
             class="filter-component"
             label="Pedidos de equipas"
             [iconStatus]=""
-            (click)="onIntentChange(postsIntent.SEEK)"
+            (click)="onIntentChange(postsIntent.Seek)"
             [theme]="seekTheme"
         ></app-button>
     </div>
