--- a/src/app/screens/register/components/register-form/register-form.component.html
+++ b/src/app/screens/register/components/register-form/register-form.component.html
@@ -30,7 +30,7 @@
                 Ocorreu um erro, por favor tente novamente!
             </div>
             <app-button
-                label="Registrar"
+                label="Registar"
                 [iconStatus]="requesting ? buttonStatus.LOADING : ''"
                 type="submit"
                 class="button-submit"
