fix bug select without filter

--- a/src/app/screens/register/components/company-form/company-form.component.scss
+++ b/src/app/screens/register/components/company-form/company-form.component.scss
@@ -1,15 +1,13 @@
 :host {
-
     padding: 0 40px !important;
 
     .form-section::ng-deep {
-
-        app-input-select> div {
-            padding-bottom: 7px;
+        app-input-select > div {
+            padding: 7px 0px;
         }
     }
 
-    @media all and (max-width: 720px)  {
+    @media all and (max-width: 720px) {
         padding: 0 !important;
     }
 }
