--- a/src/assets/scss/forms/form.scss
+++ b/src/assets/scss/forms/form.scss
@@ -31,12 +31,18 @@
     @include mobile {
         font-size: 13px;
         line-height: 16px;
-        padding: 7px;
+        padding-top: 0px;
+        padding-bottom: 14px;
+        padding-left: 7px;
+        padding-right: 7px;
     }
 
     @include tablet {
         font-size: 16px;
         line-height: 19px;
-        padding: 9px;
+        padding-top: 3px;
+        padding-bottom: 15px;
+        padding-left: 9px;
+        padding-right: 9px;
     }
 }
