--- a/src/app/screens/register/components/user-form/user-form.component.html
+++ b/src/app/screens/register/components/user-form/user-form.component.html
@@ -2,7 +2,6 @@
     <p class="form-title">Dados do representante</p>
 
     <div class="inputs-container" [formGroup]="form">
-
         <app-input-text
             formControlName="phone"
             type="text"
@@ -32,9 +31,8 @@
             Campo obrigatório
         </div>
         <div *ngIf="errors.password.format" class="error-message">
-            A senha deve ter pelo menos 9 caracteres, incluindo uma letra maiúscula, uma minúscula, um número e um caractere especial
+            A password deve ter pelo menos 9 caracteres, incluindo uma letra maiúscula, uma
+            minúscula, um número e um caractere especial
         </div>
-
     </div>
-
 </div>
