--- a/src/app/screens/home-screen/components/section-intro/section-intro.component.html
+++ b/src/app/screens/home-screen/components/section-intro/section-intro.component.html
@@ -15,7 +15,7 @@
             <app-button url="/register" label="Criar nova conta" theme="secundary"></app-button>
         </div>
         <div class="main-actions" *ngIf="isAuthenticated">
-            <app-button url="/posts" label="Ver equipas"></app-button>
+            <app-button url="/posts" label="Ver equipas disponíveis"></app-button>
         </div>
     </div>
 </div>
