--- a/src/app/screens/company-posts-list-screen/components/company-posts-list-screen.component.scss
+++ b/src/app/screens/company-posts-list-screen/components/company-posts-list-screen.component.scss
@@ -1,5 +1,10 @@
 :host {
     display: flex;
     flex: 1;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    .title {
+        color: var(--color-cosmic);
+    }
 }
