--- a/src/app/screens/posts-list-screen/components/posts-list-screen.component.html
+++ b/src/app/screens/posts-list-screen/components/posts-list-screen.component.html
@@ -1,3 +1,4 @@
+<h1 class="title">Equipas disponíveis</h1>
 <app-posts-list
     [posts]="posts"
     [businessAreaOptions]="businessAreaOptions$ | async"
