--- a/src/app/components/posts-list/posts-list.component.scss
+++ b/src/app/components/posts-list/posts-list.component.scss
@@ -55,7 +55,7 @@
     align-items: center;
 
     .title {
-        color: var(--color-black);
+        color: var(--color-cosmic);
 
         @include mobile {
             font-size: 20px;
