--- a/src/app/screens/company-posts-list-screen/components/company-posts-list-screen.component.html
+++ b/src/app/screens/company-posts-list-screen/components/company-posts-list-screen.component.html
@@ -1,3 +1,4 @@
+<h1 class="title">As minhas equipas</h1>
 <app-posts-list
     [posts]="posts"
     [businessAreaOptions]="businessAreaOptions$ | async"
