--- a/src/app/screens/home-screen/components/section-partners/section-partners.component.scss
+++ b/src/app/screens/home-screen/components/section-partners/section-partners.component.scss
@@ -71,14 +71,19 @@
 
                 .icons-list {
                     display: grid;
-                    grid-template-columns: var(--columns-width-mobile) var(--columns-width-mobile) var(
-                            --columns-width-mobile
-                        );
-                    grid-template-rows: var(--rows-width-mobile) var(--rows-width-mobile);
+                    grid-template-columns:
+                        var(--columns-width-mobile)
+                        var(--columns-width-mobile)
+                        var(--columns-width-mobile);
+                    grid-template-rows:
+                        var(--rows-width-mobile)
+                        var(--rows-width-mobile)
+                        var(--rows-width-mobile);
 
                     .item {
                         img {
                             max-width: 70px;
+                            max-height: 60px;
                         }
                     }
                 }
@@ -115,15 +120,16 @@
                 .icons-list {
                     display: grid;
                     grid-template-columns:
-                        var(--columns-width-desktop) var(--columns-width-desktop) var(
-                            --columns-width-desktop
-                        )
-                        var(--columns-width-desktop) var(--columns-width-desktop);
+                        var(--columns-width-desktop)
+                        var(--columns-width-desktop)
+                        var(--columns-width-desktop)
+                        var(--columns-width-desktop);
                     grid-template-rows: var(--rows-width-desktop) var(--rows-width-desktop);
 
                     .item {
                         img {
                             max-width: 145px;
+                            max-height: 135px;
                         }
                     }
                 }
