--- a/src/app/material/post-card/post-card.component.scss
+++ b/src/app/material/post-card/post-card.component.scss
@@ -14,7 +14,9 @@
 .header {
     position: relative;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
     width: 100%;
 
     @include mobile {
@@ -58,6 +60,26 @@
         @include tablet {
             font-size: 30px;
             line-height: 35px;
+        }
+    }
+
+    .post-subTitle {
+        font-family: Work Sans;
+        font-style: normal;
+        font-weight: bold;
+        text-align: center;
+        text-transform: uppercase;
+        color: var(--color-white);
+        z-index: 0;
+
+        @include mobile {
+            font-size: 20px;
+            line-height: 25px;
+        }
+
+        @include tablet {
+            font-size: 20px;
+            line-height: 25px;
         }
     }
 
@@ -119,11 +141,11 @@
 
 .body {
     @include mobile {
-        padding: 15px 18px;
+        padding: 10px 18px;
     }
 
     @include tablet {
-        padding: 15px 18px;
+        padding: 10px 18px;
     }
 
     .business-area {
@@ -131,19 +153,54 @@
         font-style: normal;
         font-weight: 600;
         color: var(--color-cosmic);
+        max-width: 290px;
 
         @include mobile {
             font-size: 20px;
             line-height: 23px;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
         @include tablet {
             font-size: 20px;
             line-height: 23px;
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
     }
+
+    .jobs {
+        font-size: 16px;
+        line-height: 20px;
+        font-family: Work Sans;
+        color: var(--color-cosmic);
+        height: 60px;
+
+        &.grid {
+            display: grid;
+            grid-template-rows: auto auto auto;
+            grid-auto-flow: column;
+            column-gap: 15px;
+        }
+
+        li {
+            display: flex;
+        }
+
+        .job-name {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        &.grid .job-name {
+            width: 150px;
+        }
+
+        .job-count {
+            margin-left: 5px;
+        }
+    }
+
     .calendar {
         display: flex;
         justify-content: space-between;
@@ -254,6 +311,7 @@
         }
     }
 }
+
 .footer {
     display: flex;
     border-top: 1px solid var(--color-cosmic);
