--- a/src/app/screens/equipas/add-equipa/components/add-equipa-view/add-equipa-view.component.html
+++ b/src/app/screens/equipas/add-equipa/components/add-equipa-view/add-equipa-view.component.html
@@ -2,7 +2,13 @@
     [formGroup]="form" 
     (ngSubmit)="submit()">
 
-    <app-equipa-form formControlName="equipa" [notifier]="notifier">
+    <app-equipa-form 
+        (districtChange)="onDistrictChange($event)"
+        [distritos]="districtOptions$ | async"
+        [concelhos]="municipalityOptions$ | async"
+        [jobOptions]="jobsOptions$ | async"
+        formControlName="equipa"
+        [notifier]="notifier">
     </app-equipa-form>
 
     <br><br><br>
