--- a/src/app/material/input-select/input-select.component.html
+++ b/src/app/material/input-select/input-select.component.html
@@ -12,7 +12,7 @@
         <svg-icon class="arrow" src="/assets/img/icons/select-arrow.svg"></svg-icon>
     </div>
     <div class="dropdown-menu" id="dropdown-menu" role="menu">
-        <div *ngIf="inputSelectOptions.length > 5" class="search-box-container">
+        <div *ngIf="inputSelectOptions && inputSelectOptions.length > 5" class="search-box-container">
             <svg-icon class="search" src="/assets/img/icons/search.svg"></svg-icon>
             <input #searchBox class="search-box" placeholder="Filtrar" (input)="onSearch($event)" />
         </div>
