--- a/src/app/screens/equipas/edit-equipa/components/add-equipa-view/edit-equipa-view.component.html
+++ b/src/app/screens/equipas/edit-equipa/components/add-equipa-view/edit-equipa-view.component.html
@@ -1,6 +1,8 @@
 <app-equipa-form-container [initialValue]="initialValue">
     <br><br>
-    <button (click)="submit()">Adicionar Equipa</button>
+    <button (click)="submit()">Gravar</button>
     <br>
+
+    <button (click)="deleteTeam()">Apagar Equipa</button>
     <br>
 </app-equipa-form-container>
