--- a/src/app/material/post-card/post-card.component.html
+++ b/src/app/material/post-card/post-card.component.html
@@ -40,7 +40,7 @@
         </div>
     </div>
 </div>
-<div class="footer">
+<div class="footer" *ngIf="actions.length !== 0">
     <app-button
         *ngIf="!!buttonsAction[actionsMap.CONTACT]"
         label="Contactar"
