--- a/src/app/screens/equipas/components/equipa-form-container/equipa-form.container.html
+++ b/src/app/screens/equipas/components/equipa-form-container/equipa-form.container.html
@@ -1,17 +1,14 @@
-<form
-    [formGroup]="form">
-
-    <app-equipa-form 
+<form [formGroup]="form" class="form-container">
+    <app-equipa-form
         (districtChange)="onDistrictChange($event)"
         [distritos]="districtOptions$ | async"
         [concelhos]="municipalityOptions$ | async"
         [jobOptions]="jobsOptions$ | async"
         formControlName="equipa"
-        [notifier]="notifier">
+        [notifier]="notifier"
+        class="equipa-form"
+    >
     </app-equipa-form>
 
-    <ng-content>
-
-    </ng-content>
-
+    <ng-content></ng-content>
 </form>
