--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -114,6 +114,10 @@
             }
         }
 
+        .label {
+            display: none;
+        }
+
         app-link {
             ::ng-deep {
                 [theme='regular'] {
