--- a/src/app/screens/material-screen/material-screen.component.html
+++ b/src/app/screens/material-screen/material-screen.component.html
@@ -44,6 +44,15 @@
         ></app-checkbox>
     </div>
 
+    <h1>InputTextAreaComponent</h1>
+    <div class="columns is-desktop">
+        <app-input-textarea
+            class="column"
+            formControlName="inputTextarea"
+            placeholder="Text"
+        ></app-input-textarea>
+    </div>
+
     <h1>ButtonComponent</h1>
     <div class="columns">
         <app-button label="Theme: main (default)" class="column"></app-button>
