--- a/src/app/material/post-card/post-card.component.html
+++ b/src/app/material/post-card/post-card.component.html
@@ -1,3 +1,4 @@
+<div [routerLink]="[postCard?.url]">
 <div class="header">
     <div class="cover-container">
         <img class="cover" [src]="cover" />
@@ -53,4 +54,5 @@
         [theme]="buttonTheme"
         class="share"
     ></app-button>
+</div>
 </div>
