--- a/src/app/screens/equipas/readonly-equipa/components/add-equipa-view/readonly-equipa-view.component.html
+++ b/src/app/screens/equipas/readonly-equipa/components/add-equipa-view/readonly-equipa-view.component.html
@@ -1,3 +1,10 @@
 <h1 class="title">Detalhes</h1>
 <app-equipa-form-container [initialValue]="initialValue">
+    <app-button
+        url="/equipas/edit"
+        class="button"
+        type="button"
+        size="fit"
+        label="Editar"
+    ></app-button>
 </app-equipa-form-container>
