--- a/src/app/material/input-text/input-text.component.html
+++ b/src/app/material/input-text/input-text.component.html
@@ -6,4 +6,5 @@
     (change)="onUpdate($event)"
     (input)="onUpdate($event)"
     [attr.disabled]="formControl.disabled ? 'disabled' : null"
+    [ngClass]="{ disabled: formControl.disabled }"
 />
