--- a/src/app/material/post-card/post-card.component.scss
+++ b/src/app/material/post-card/post-card.component.scss
@@ -11,6 +11,10 @@
     background-color: var(--color-white);
 }
 
+a {
+    text-decoration: none;
+}
+
 .header {
     position: relative;
     display: flex;
